# mocktentacle

./: Cargo.toml  LICENSE  README.md
src/: call_glue.rs  expected_call.rs  lib.rs  mock.rs  validate.rs  verify.rs
tests/: expected_call.rs  mock.rs
